Add quotes to escape text

--- a/blog/0031.md
+++ b/blog/0031.md
@@ -15,7 +15,7 @@ After the tunnel I saw a sign for the California Trail Interpretive Centre. Not 
 
 I chatted with the guy at the front desk. He turned out to be from Iowa. It seems to be very difficult to find people who actually come from the state they are working in. I bought a California Trail t-shirt to give me an option for rest days and then got chatting to Sonya and her friend/relative who actually were from Nevada.
 
-![landscape](https://farm8.staticflickr.com/7377/14009668128_4ef7a2bfdf_z.jpg Genuine Nevadans)
+![landscape](https://farm8.staticflickr.com/7377/14009668128_4ef7a2bfdf_z.jpg "Genuine Nevadans")
 
 Part of the exhibition was about "seeing the elephant"; a phrase the emigrants used to describe the difficulties they encountered. It may have derived from the difficulty people had of describing elephants for the first time at travelling fairs. I think I may well have seen at least part of the elephant on this trip. 
 
