BC Outdoors and Weber State Park

--- a/blog/0037.md
+++ b/blog/0037.md
@@ -37,7 +37,7 @@ At the highway I vaguely remembered a friend from back home telling me there was
 
 ![portrait](https://farm8.staticflickr.com/7400/14196408325_7a1dc933cd_c.jpg "I obeyed the sign and didn't climb into the nozzle.")
 
-Eighteen miles later I reached Corinne - the first town in 130 miles. On the outskirts the desert gives way to lush green fields. I had hit the incredibly fertile strip that runs along the western side of the Great Salt Lake. You can see why the Mormons made their home here. 
+Eighteen miles later I approached Corinne - the first town in 130 miles. On the outskirts the desert gives way to lush green fields. I had hit the incredibly fertile strip that runs along the western side of the Great Salt Lake. You can see why the Mormons made their home here. I also experience my first close driver for 1000 miles. In the UK people often pass too closely but I'd got used to the two or three feet that people in California and Nevada had been leaving.
 
 ![landscape](https://farm8.staticflickr.com/7459/14196409805_2065f0c367_z.jpg "Crops near Corrine")
 
