No hobbits were involved.

--- a/blog/0037.md
+++ b/blog/0037.md
@@ -7,7 +7,7 @@ Back when I was in San Francisco I visited the Stanford Museum with my friend Ph
 
 I had followed the Central Pacific railroad all the way from Oakland and here I was at the end. There was even a National Park Visitor Center complete with two working steam engines! Oddly, the original meeting point of the railroads was going to be much further south near Ogden but, as the railroads were being paid by the US government by the mile, the companies added a few miles on for good measure.
 
-After a visit to the "restroom" and a long drink from the water fountain, I found the Rangers and asked for help with my broken pannier rack. They sent Ranger Phil to my rescue. He brought along some tooks and we managed to patch it up by attaching it to the second bolt hole on my frame. It meant the rack was a little twisted but it was good enough.
+After a visit to the "restroom" and a long drink from the water fountain, I found the Rangers and asked for help with my broken pannier rack. They sent Ranger Phil to my rescue. He brought along some tools and we patched it up by attaching it to the second bolt hole on my frame. It meant the rack was a little twisted but it was good enough.
 
 ![portrait](https://farm8.staticflickr.com/7438/14196398385_f053e9854d_c.jpg "Ranger Phil to the rescue")
 
