--- a/blog/0037.md
+++ b/blog/0037.md
@@ -15,7 +15,7 @@ Outside the centre I saw the two locomotives and got chatting to a couple of tou
 
 ![landscape](https://farm8.staticflickr.com/7390/14196399815_ef1173ddce_z.jpg "Locomotives at Golden Spike")
 
-![landscape](https://farm8.staticflickr.com/7385/14009747958_9a8984f631_z.jpg "Locomtive Engineer")
+![landscape](https://farm8.staticflickr.com/7385/14009747958_9a8984f631_z.jpg "Locomotive Engineer")
 
 Inside I thanked the friendly National Park rangers for their help with my bike and had a good chat with them. They had a replica of the golden spike in a glass case. It was a slightly weird situation to have cycled from the original golden spike to Golden Spike to see a replica of the golden spike. Weird but strangely pleasing.
 
