--- a/blog/0040.md
+++ b/blog/0040.md
@@ -3,11 +3,11 @@ Title:	Canyons, Devil's Slide and the Thousand Mile Tree
 Date:	2014-05-16T20:00:00+PDT
 ---
 
-Mrs Higginson provided an excellent breakfast and I was presented with a glass jar of honey to take on my trip. Lyne, their neighbour, came over to see me off and gave me a good flask that doesn't leak. 
+Mrs Higginson provided an excellent breakfast and I was presented with a glass jar of honey to take on my trip. Lyne, the Higginson's neighbour, came over to see me off and gave me a good flask that doesn't leak. 
 
 My route was to take me into Weber Canyon and, from my trip planning, I'd been unsure if I'd be able to get into this due to there only being an interstate. The Higginsons said it should be fine as it was a short stretch and gave me directions for getting onto it. The start was quite exciting as it involved negotiating the slip roads on the 93 and I-84. I then had a headwind dropping my speed to under 10 mph. Handily, there were road works through most of the canyon so I was able to be in the coned off right-hand lane all by myself. Being in the works access lane was a lot safer than being in the single remaining lane of a freeway for 3-4 miles.
 
-![landscape](https://farm4.staticflickr.com/3733/14282927796_2886ece7ac_z.jpg "Looking back to Weber Pass")
+![landscape](https://farm4.staticflickr.com/3733/14282927796_2886ece7ac_z.jpg "Looking back to Weber Canyon")
 
 At Mountain Green I hit alternate roads and had a message from the Higginsons who'd driven through Weber Canyon to check I'd got through OK. It is so lovely to have locals checking that you are safe. The alternate road had the familiar __L__ signs showing me I was back on the Old Lincoln Highway.
 
