--- a/blog/0043.md
+++ b/blog/0043.md
@@ -9,7 +9,7 @@ I was a month into my phone service so had to call their automated line for my s
 
 ![landscape](https://farm6.staticflickr.com/5505/14119543097_403a1da6f9_z.jpg "Towards the Uintah Mountains")
 
-I headed to Hilliard and stopped at the historic markers. To a little beyond a reservoir the road was paved but it then turned to gravel/dirt. For the next few miles the road passed between occasional buildings. It wound its way around the landscape following some of the old railroad grade - the railroad had later been shortened by 10 miles when they built two tunnel so this section had been abandoned.
+I headed to Hilliard and stopped at the historic markers. To a little beyond a reservoir the road was paved but it then turned to gravel/dirt. For the next few miles the road passed between occasional buildings. It wound its way around the landscape following some of the old railroad grade - the railroad had later been shortened by 10 miles when they built two tunnels so this section had been abandoned after Stevens' time.
 
 ![landscape](https://farm4.staticflickr.com/3797/14119468040_c9e4d345ff_z.jpg "Road towards Piedmont")
 
@@ -23,11 +23,11 @@ The road curved around to meet the I-80 again and I saw the only sheep I'd seen 
 
 ![landscape](https://farm4.staticflickr.com/3807/14119484550_02bf44eaca_z.jpg "Sheep crossing")
 
-I stayed on frontage road (marked with the Old Lincoln Highway "L") along the side of the freeway up a steep, long hill onto the top of a flat mountain. Most of the hills around here look like they've had the tops sliced off. These seems to be because the surface has eroded from its original level which is now the top of these hills. Up on this particular flat-topped hill was a huge wind farm and my road went between the turbines.
+I stayed on frontage road (marked with the Old Lincoln Highway "L") along the side of the freeway up a steep, long hill onto the top of a flat mountain. Most of the hills around here look like they've had the tops sliced off. It seems to be that the tops were originally a flat plain that has slowly eroded away. Up on this particular flat-topped hill was a huge wind farm and my road went between the turbines.
 
 ![landscape](https://farm6.staticflickr.com/5569/14119570457_344375832e_z.jpg "Wind power")
 
-I stopped for a rest (and some more Swedish Fish) at the interstate services. A man asked me if I was from California! All through California people thought I was Australian and now someone thought my accent was from California. 
+I stopped for a rest (and some more Swedish Fish) at the interstate services. A man asked me if I was from California! All through California people thought I was Australian and now someone thought my accent was from California. People seem really bad at placing accents here.
 
 Leaving the services I failed to find the frontage road marked on Open Street Map - the first time it had failed me. At the next intersection I did find a frontage road but it then headed off in the wrong direction leaving me separated from the freeway by a huge carpark and a five foot tall barbed wire fence. I wasn't going backwards so I scaled the fence with my bike. I wasn't sure what the carpark was doing in the middle of nowhere. I'm sure Wyoming folk have their reasons.
 
