--- a/blog/0045.md
+++ b/blog/0045.md
@@ -49,7 +49,7 @@ I found the park at the edge of the town (or hamlet). For dinner I went to the _
 
 I was after food so I ordered a calzone from the bar menu and Vern was so convinced that I'd like it he said he'd pay for it if I didn't. We were joined by Tammy who ordered a long drink that I'm sure had whiskey in it. Vern seemed to be nursing a whiskey too. Stevens had described Granger as having:
 
-> "plenty of whiskey, but no customers"
+> plenty of whiskey, but no customers
 
 It looked as though things had improved slightly since Stevens' day. Jessica was originally from California and had moved here when she got married. Between the four of us we had quite a conversation.
 
@@ -57,4 +57,4 @@ It looked as though things had improved slightly since Stevens' day. Jessica was
 
 I should mention the calzone. It was huge! Great for a long distance cyclist. I had three-quarters of it and Jessica wrapped the remainder for me. I had a blackberry bear from Boston mostly because of the name - __Fat Tire__. Tammy said she'd get the lady that locks the toilets in the park to leave them open for me and, an hour or so later when I was in my tent, a car pulled up and the lady unlocked the gents for me. I'd met about 8% of the population now. As she jumped back into her SUV, she enigmatically warned:
 
-> "Don't let the moose step on you during the night."
+> Don't let the moose step on you during the night.
