--- a/blog/0046.md
+++ b/blog/0046.md
@@ -7,6 +7,7 @@ I was up early with a night undisturbed by moose (mooses?). I initially followed
 
 The next few miles were tough going as it wasn't much of a track and what there was had a covering of sand meaning I had to push. My laden bike will not pedal through sand. Eventually, as I climbed up onto some Buttes, the sand lessened and I was able to pedal. Along the top of the Buttes I skimmed with great views in most directions.
 
+![landscape](https://farm4.staticflickr.com/3725/14326358043_8fa45bb902_z.jpg "Railroad views from the top of the Buttes")
 
 I could see smoke from a chemical plant towards the east and the railroad to the north. The track followed the top of the Buttes towards the railroad below then turned right to follow it. I went over a crossing and along the side of the railroad to the chemical works. Here was a sign saying "private railroad crossing" which was OK by me as I wasn't crossing it. There was a chemical smell in the air so I used my buff to cover my nose and mouth. I dread to think what I was breathing in at this remote site. There were lots of trains - parked and moving - that blocked my view from the chemical works. I felt that was a good thing.
 
@@ -14,9 +15,13 @@ At this point I saw my first passenger train since California. I waved at the pa
 
 I wasn't overly comfortable on this frontage road and was glad when I found an off ramp to __Byron Road__. I ignored my planned route along the side of the railroad in favour of a paved road after hours of sand and dirt. Stevens was a hardy soul.
 
-Back to and over the I-80 I had a long freewheel downhill sandwiched between the freeway and the railroad towards __Green River__. There I stopped at a 50s diner on the outskirts and then visited the town museum. They had quite a few exhibits (and school parties) and it was good to see them tackling issues such as the massacre of Chinese workers in 1885. It is shameful how badly treated non-Europeans were in the Wild West and the Chinese emigrants didn't even officially count as population.
+Back to and over the I-80 I had a long freewheel downhill sandwiched between the freeway and the railroad towards __Green River__. As I approached the outskirts of the town I was following the river down into the dramatic canyon it had carved. Eons of geological time was exposed for all to see in the layers of rock. I stopped at a 50s diner and, after filling up on calories, I visited the town museum. They had quite a few exhibits (and school parties) and it was good to see them tackling issues such as the massacre of Chinese workers in 1885. It is shameful how badly treated non-Europeans were in the Wild West and the Chinese emigrants didn't even officially count as population.
+
+![landscape](https://farm4.staticflickr.com/3800/14302836331_3c7aaf34da_z.jpg "Green River")
 
 From Green River I spotted the Old Lincoln Highway so aimed for that rather than the I-80. This involved a very steep sandy track uphill which I had to walk. It gave me a closer experience to that of Stevens. Under the I-80 and to the cemetary then a very hilly and poor dirt track to join the equally poor Old Lincoln Highway. Thankfully nobody really uses it as I had to weave all over the road to avoid huge holes. I passed more house-like buildings that weren't habitation but some kind of service buildings for gas pipes or other industry. They give the impression of being in a populated landscape when you aren't.
+
+![landscape](https://farm4.staticflickr.com/3824/14119564750_9e53c61811_z.jpg "Leaving Green River with the I-80 in the distance")
 
 A couple of miles from __Rock Springs__ the Old Lincoln Highway turned into a paved road and made a pleasant ride into town. Tonight I was staying with a guy named Rick who met me on his fold up bike. At his apartment he gave me some chicken and a baked potato - the first real potato I'd had in weeks. Rick had several bikes. He said:
 
@@ -24,4 +29,4 @@ A couple of miles from __Rock Springs__ the Old Lincoln Highway turned into a pa
 
 Rick had cycled across the United States in around 36 days on the southern route which makes my 100 day long northern route seem a bit lazy. However, even his time seemed leisurely compared to the fastest crossing of the US which was only 7 days 22 hours! Rick was an interesting guy with lots of cycling experience and a huge range of books in his library. We had a wide-ranging conversation covering everything from Russian politics to me trying to explain what the Eurovision Song Contest was without sounding delusional.
 
-Total distance: 1238 miles.
+Total distance so far: 1238 miles.
