--- a/blog/0051.md
+++ b/blog/0051.md
@@ -16,3 +16,5 @@ In Rock River I stopped to get a drink and sweets in the General Store. It turne
 ![landscape](https://farm4.staticflickr.com/3728/14304363972_1da79e3ebf_z.jpg "The second long-distance cyclist I'd seen")
 
 Laramie has a population of around 30,000 and was a sight for tired eyes. I checked my tent into the KOA.
+
+Total distance cycled so far: 1489 miles.
