--- a/blog/0053.md
+++ b/blog/0053.md
@@ -11,4 +11,8 @@ On the ride into Laramie I'd been wondering where the Rockies were. Why couldn't
 
 The interstate wound around between the hills. From the plains you'd be forgiven for thinking it must go into a tunnel but it winds upwards over the summit. By "summit" I refer to the highest point on the Lincoln Highway at 8620 ft but it was slightly lower than the original Lincoln Highway. The modern railroad goes a different route. The summit is overlooked by a giant head of Abraham Lincoln made to celebrate the anniversary.
 
+![portrait](https://farm6.staticflickr.com/5272/14408814464_9182bfb48a_c.jpg "Lincoln Monument")
+
+![landscape](https://farm4.staticflickr.com/3908/14386825016_820d8e810b_z.jpg "Lincoln Highway Highest point")
+
 In the visitor centre [I felt I'd earned](https://twitter.com/RTWbike/status/472798180405686272) the free "bike Wyoming" sticker given that I'd cycled from the west side of the state all the way to this point nearly at the eastern extreme. The lady at the desk said that if I was heading to Cheyanne I should really go via the nicer WY210 - __Happy Jack Road__. That put me in a quandry. Do I stick to my planned route (which wasn't exactly the same as Stevens anyway) or go this other road. I [put it to the public vote](https://twitter.com/RTWbike/status/472801394442133504). By the end of my lunch break Anne Akers, Chris North and my sister had all opted for Happy Jack Road so I went that way.
