--- a/blog/2015005.md
+++ b/blog/2015005.md
@@ -7,23 +7,23 @@ In Allesley I stopped at The Village Barbers to get a trim. Actually I got a num
 
 It was a short ride into Coventry and I found the Starley Memorial. I stopped to recreate the illustration in Thomas Stevens' book. In using the self-timer my camera blew over in the wind and I had to dive to the concrete to save it. I then co-opted local man Paul to take the picture for me. He recommended the Coventry Transport Museum so that is where I went next.
 
-![portrait](https://flic.kr/p/srpoJ9 "The Starley Memorial")
+![portrait](https://farm8.staticflickr.com/7756/17352752396_8b54fa36df.jpg "The Starley Memorial")
 
-![portrait](https://flic.kr/p/sc8tBW "Paul")
+![portrait](https://farm8.staticflickr.com/7709/17191216120_2094b1afaa.jpg "Paul")
 
 The museum was being refurbished but was really good and had free entry. They started with the history of the Penny Farthing and progressed through the motor industry to the ThrustSSC.
 
-![portrait](https://flic.kr/p/sanAR6 "Penny Farthings")
+![portrait](https://farm9.staticflickr.com/8723/17171339007_8389a1c133.jpg "Penny Farthings")
 
-![portrait](https://flic.kr/p/seB3Lf "ThrustSSC")
+![portrait](https://farm8.staticflickr.com/7747/17219228630_bcfd93dc43.jpg "ThrustSSC")
 
 Even a quick look around the museum meant I left Coventry after midday. Last night I'd tried having a cold shower for 15 minutes on my knees. That was as close as I could get to an ice bath. It had seemed to have helped as it wasn't as sore as yesterday.
 
 I had some lovely views of Northamptonshire and reached Weedon Barracks by 15:45. The Barracks are no longer military so I couldn't get a pint of stout with an officer like Thomas Stevens did. Instead I briefly chatted to the security guard who let me take a picture.
 
-![landscape](https://flic.kr/p/rxbk4i "Northamptonshire")
+![landscape](https://farm8.staticflickr.com/7698/16761745803_54563e0f70.jpg "Northamptonshire")
 
-![landscape](https://flic.kr/p/srGGdU "Weedon Barracks")
+![landscape](https://farm8.staticflickr.com/7747/17356128156_f003b3f3c2.jpg "Weedon Barracks")
 
 On the outskirts of Milton Keynes I paid a visit to the Cycle King bike shop to get spare break pads as mine are wearing down. I had a bit of a chat with the guys in the shop then pressed on around Milton Keynes. It didn't exist in Stevens' day so I was going to Fenny Stratford. Handily, Milton Keynes has a great network of cycle lanes so I was able to keep off road for quite a stretch.
 
