--- a/blog/2015005.md
+++ b/blog/2015005.md
@@ -5,9 +5,11 @@ Date:	2015-05-05T219:00:00+0100
 
 In Allesley I stopped at The Village Barbers to get a trim. Actually I got a number 1 as then I don't have to worry about washing my hair for a while. Thanks to Max (?) and Stacey for the haircut and good wishes.
 
-It was a short ride into Coventry and I found the Starley Memorial. I stopped to recreate the illustration in Thomas Stevens' book. In using the self-timer my camera blew over in the wind and I had to dive to the concrete to save it. I then co-opted local man Paul to take the picture for me. He recommended the Coventry Transport Museum so that is where I went next.
+It was a short ride into Coventry and I found the Starley Memorial. I stopped to recreate [the illustration in Thomas Stevens' book](http://www.flickr.com/photos/britishlibrary/11189636485/). In using the self-timer my camera blew over in the wind and I had to dive to the concrete to save it. I then co-opted local man Paul to take the picture for me. He recommended the Coventry Transport Museum so that is where I went next.
 
 ![portrait](https://farm8.staticflickr.com/7756/17352752396_8b54fa36df.jpg "The Starley Memorial")
+
+![portrait](http://www.strudel.org.uk/blog/stevens/images/1885_starley_memorial.png "The Starley Memorial illustration courtesy of the British Library")
 
 ![portrait](https://farm8.staticflickr.com/7709/17191216120_2094b1afaa.jpg "Paul")
 
