--- a/blog/2015006.md
+++ b/blog/2015006.md
@@ -13,7 +13,7 @@ As the route swung around to the south, the side wind of the past couple of days
 
 Over the phone I negotiated a £30 room in a B&B. In trying to find it, a big, blue, nox caught my attention. There was a TARDIS in someone's front garden. Next to it was a velociraptor and a robot dog! 
 
-![landscape](https://flic.kr/p/stQoSy "The Doctor?")
+![landscape](https://flic.kr/p/sw6FBD "The Doctor?")
 
 As I stopped to take a picture the owner jumped out and said he'd move his car for me. His name was "Ska-V-Goldsmith" (or Nigel) and he seemed to be a modern day polymath with claims of a background in nuclear fission, rocket science and art. Nigel was certainly a very interesting person.
 
