--- a/blog/2015009.md
+++ b/blog/2015009.md
@@ -10,7 +10,7 @@ cliffs following NCN 2. I met a Frenchman on a bike cycling from
 Dover along the south coast. He remarked that I didn't have much 
 luggage - the opposite of the Dutchman in Liverpool. 
 
-![landscape](https://flic.kr/p/rLbYgg "Coastal flowers")
+![landscape](https://farm8.staticflickr.com/7781/16908985413_ceb689c77d.jpg "Coastal flowers")
 
 I sped down 
 into New Haven and ended up in the town centre when I lost the 
