Adding photos and post about Vienna

--- a/blog/2015002.md
+++ b/blog/2015002.md
@@ -5,9 +5,15 @@ Date:	2015-05-02T19:20:00+0100
 
 I started out from New Brighton where I dipped my wheel in the sea and my dad waved me off. Along the front in the rain I found the famous Ferry Across the Mersey. Whilst waiting I talked to some lightweight tourers who told me that my bike was too heavy. I said I should be fine having done this before.
 
+![landscape](https://farm1.staticflickr.com/549/18829855613_e75b77b6bc_z_d.jpg "Touring cyclists at the ferry")
+
+![landscape](https://farm1.staticflickr.com/347/19454772721_e3453ec799_z_d.jpg "Ferry. Across the Mersey.")
+
 The ferry turned out to be a 40 minute cruise up and down the Mersey so I arrived at All Saints church at Edge Hill 20 minutes late. Awaiting me was my friend Peter who was going to accompany me out to Warrington much as the Anfield Bicycle Club had with Thomas Stevens 130 years ago.
 
-![landscape](https://farm8.staticflickr.com/7732/17344758726_f8b9184f7b.jpg "At Edge Hill church")
+![landscape](https://farm1.staticflickr.com/518/19444214432_c280bf59f0_z_d.jpg "At Edge Hill church")
+
+![landscape](https://farm8.staticflickr.com/7732/17344758726_f8b9184f7b.jpg "Setting off with Peter")
 
 Just like Stevens, we were heading along Edge Hill Road and the capricious British weather threw wind and rain at us. We manage to catch a section of National Cycle Network along and old train line which was much more pleasant than city roads. As we left Liverpool we  took in views both rural and industrial along the Wirral.
 
