--- a/blog/2015013.md
+++ b/blog/2015013.md
@@ -3,8 +3,4 @@ Title:	Missing days
 Date:	2015-05-27T17:00:00+0200
 ---
 
-I'd been writing blogvposts about the days after Paris on my 
-phone and had't got around to posting them. Unfortunately, 
-as you'll read next, my phone screen broke and now I can't 
-access them. Hopefully I can get them back once I return 
-home to the UK. For now, we'll have to skip on to Munich.
+I'd been writing blog posts about the days after Paris on my phone and hadn't got around to posting them. Unfortunately, as you'll read next, my phone screen broke and now I can't access them. Hopefully I can get them back once I return home to the UK. For now, we'll have to skip on to Munich.
