--- a/blog/2015025.md
+++ b/blog/2015025.md
@@ -1,52 +1,20 @@
 ---
-Title:	Munich to Altoetting
+Title:	Broken in Bavaria
 Date:	2015-05-27T21:00:00+0200
 ---
 
+At breakfast I had an interesting conversation with Ashley from Tennessee about cultural differences and similarities. With a late start I headed out of Munich only stopping to buy some cheese and German bread in the market. This morning was threatening rain and I was heading towards black clouds. Thankfully they seemed to be going in the same direction. Out of the suburbs I had bike tracks through forest. They were well signed for local towns and these ones were even better by listing bigger places as much as 28km away. That is much more useful for the long distance cyclist. The riding was pleasant and my knees were able to cope with the gentle hills. For five minutes I had a little rain shower but after that I was able to put my waterproofs away. 
 
-At breakfast I had an interesting conversation with Ashley from 
-Tennessee about cultural differences and similarities. With a late start 
-I headed out of Munich only stopping to buy some cheese and German bread 
-in the market. This morning was threatening rain and I was heading 
-towards black clouds. Thankfully they seemed to be going in the same 
-direction. Out of the suburbs I had bike tracks through forest. They 
-were well signed for local towns and these ones were even better by 
-listing bigger places as much as 28km away. That is much more useful for 
-the long distance cyclist. The riding was pleasant and my knees were 
-able to cope with the gentle hills. For five minutes I had a little rain 
-shower but after that I was able to put my waterproofs away. 
+By 3pm I had reached Haag and I rewarded myself with an icecream. I hit the pleasant Inn valley and was surprised how big the Inn river was. 
 
-By 3pm I 
-had reached Haag and I rewarded myself with an icecream. I hit the 
-pleasant Inn valley and was surprised how big the Inn river was. 
+Following the Inn Trail I caught up with Michel and Connie - a German couple spending three days on the Inn trail. I accompanied them to Mulhdorf where I saw the covered arcades mentioned by Stevens. 
 
-Following the Inn Trail I caught up with Michel and Connie - a German 
-couple spending three days on the Inn trail - so accompanied them to 
-Mulhdorf where I saw the covered arcades mentioned by Stevens. Here I 
-said goodbye and joined the trail again as I had another 10 miles to 
-Altoetting. About half way there I took my phone out for a picture and 
-found the screen had mysteriously cracked. Disaster! It would no longer 
-respond. I was stranded without communication.
+![panorama](https://farm8.staticflickr.com/7683/17013926264_3083f358c7.jpg "countryside")
 
-Arriving in Altoetting I pushed past the closed shops selling crucifixes and assorted paraphernalia.
+At Muldorf I said goodbye to Michel and Connie and joined the trail again as I had another 10 miles to Altoetting. About half way there I took my phone out for a picture and found the screen had mysteriously cracked. Disaster! It would no longer respond. I was stranded without communication.
 
-I slumped down in the main square utterly dejected. There were people 
-around but I didn't know if they spoke English. I walked to the train 
-station but the trains were only once an hour to Mulhdorf. What could I 
-do? I found a pay phone and called one of the three numbers I can 
-remember. I'm not sure what help I was expecting from my sister but 2 
-Euros wasn't enough time to say much. I tried the police station but 
-they seemed closed. Eventually I saw a sign welcoming ebikes so I went 
-into the little guesthouse. The waitress/owner was in traditional 
-Austrian costume and busy with customer orders. She didn't speak English 
-other than to tell me to wait a moment. Ten minutes later a young man 
-emerged from the kitchen with enough English to establish that I wanted 
-a "zimmer" for the night. At this point, a man at the bar who had been 
-watching proceedings helped out with considerably more English. He was 
-Franz - an Austrian who worked at a hydro plant on the river. He 
-listened to my story about my trip and my broken phone and said he would 
-take me to a local shop in Neuoettling in the morning to see if it could 
-be fixed. After calming down my panic he recommended some things on the 
-menu to deal with my hunger.
+Arriving in Altoetting I pushed past the closed shops selling crucifixes and assorted paraphernalia - just as Stevens had.
+
+I slumped down in the main square utterly dejected. There were people around but I didn't know if they spoke English. I walked to the train station but the trains were only once an hour to Mulhdorf. What could I do? I found a pay phone and called one of the three numbers I can remember. I'm not sure what help I was expecting from my sister but 2 Euros wasn't enough time to say much. I tried the police station but they seemed closed. Eventually I saw a sign welcoming ebikes so I went into the little guesthouse. The waitress/owner was in traditional Austrian costume and busy with customer orders. She didn't speak English other than to tell me to wait a moment. Ten minutes later a young man emerged from the kitchen with enough English to establish that I wanted a "zimmer" for the night. At this point, a man at the bar who had been watching proceedings helped out with considerably more English. He was Franz - an Austrian who worked at a hydro plant on the river. He listened to my story about my trip and my broken phone and said he would take me to a local shop in Neuoettling in the morning to see if it could be fixed. After calming down my panic he recommended some things on the menu to deal with my hunger.
 
 I'd massively overspent my daily budget and the resolution would have to wait until morning. My confidence incompleting the trip unaided by the internet and without my copy of the book and places I needed to visit was shaken. This could be the end.
