--- a/blog/2015004.md
+++ b/blog/2015004.md
@@ -5,8 +5,18 @@ Date:	2015-05-04T20:00:00+0100
 
 After an attempted ride on Gordon's tricycle, in which I couldn't steer and headed for a ditch, I set off south to Stafford. South some more took me under the M6 and on the hunt for a toilet. This is surprisingly difficult on a Bank Holiday Monday as nowhere is open. After asking lots of clueless locals, I eventually found one in Bloxwich where I also stopped for a late lunch. Getting into big cities is slow going so I was glad to find a canal trail that took me to the site of the old tricycle works which long ago closed down. I stopped briefly for a picture at the fantastic library building.
 
+![landscape](https://farm1.staticflickr.com/501/19444312952_847e4889cf_z_d.jpg "Gordon's tricycle")
+
+![landscape](https://farm1.staticflickr.com/449/19263060770_9540d4fd82_z_d.jpg)
+
+![landscape](https://farm4.staticflickr.com/3930/18828207444_fb9a1ae7d7_z_d.jpg "Birmingham Central Library seen from near where the tricycle works had been")
+
 ![landscape](https://farm8.staticflickr.com/7685/17183189250_cebf612847.jpg "Birmingham Central Library")
 
-My right knee had started hurting yesterday and it was making it difficult to get up the little steep bridges on the towpath.
+My right knee had started hurting yesterday and it was making it difficult to get up the little steep bridges on the towpath of the canals.
 
-Out of Birmingham I was on main road which wasn't to bad. Over the border into Warwickshire the roads became more rural and I stopped at Allesley, on the outskirts of Coventry, for the night
+![landscape](https://farm1.staticflickr.com/407/19263166480_5fd70a942f_z_d.jpg "Canal tunnel in Birmingham")
+
+Out of Birmingham I was on main road which wasn't to bad. Over the border into Warwickshire the roads became more rural and I stopped at Allesley, on the outskirts of Coventry, for the night.
+
+![landscape](https://farm1.staticflickr.com/450/18830122053_b356ff3b84_z_d.jpg "Picture-perfect Allesley")
