--- a/blog/2015006.md
+++ b/blog/2015006.md
@@ -7,13 +7,23 @@ I alternated between main road and canal towpath this morning. On the main road 
 
 ![landscape](https://farm8.staticflickr.com/7752/17390839005_6028ae9dae.jpg "Heron on the canal")
 
-As the route swung around to the south, the side wind of the past couple of days turned into a bit of a head wind. I paused in Berkhampstead for pie and mash (not just any pie and mash - M&S pie and mash). There was a Penny Farthing hotel but it was over £115 a night! It seemed all the local accommodation was over £100 or fully booked. Onwards. I crossed the M25 - London's orbital motorway - and headed south to Watford.
+![landscape](https://farm4.staticflickr.com/3894/18830228713_5cd83be4bc_z_d.jpg "Canal")
+
+As the route swung around to the south through Bletchley and Leighton Buzzard, the side wind of the past couple of days turned into a bit of a head wind. In Aldbury, in the Chilterns, my route took a left up a big hill. It then took me through a bluebell filled wood. On the bridleway there was a horse and rider. I'd cycled cautiously past a few in Cheshire and Staffordshire without any problems. This one however looked nervous and the rider wasn't giving me any hints as to what I should do. As it went by me I decided to slowly move off but even this movement spooked the horse and it jumped sideways to the annoyance of the rider and gave me a shock too.
+
+![portrait](https://farm1.staticflickr.com/392/19424772556_25e7040701_z_d.jpg "Aldbury in the Chilterns")
+
+!landscape](https://farm1.staticflickr.com/358/19450844115_0db0cd0fcb_z_d.jpg "Bluebells")
+
+I paused in Berkhampstead for pie and mash (not just any pie and mash - M&S pie and mash). There was a Penny Farthing hotel but it was over £115 a night! It seemed all the local accommodation was over £100 or fully booked. Onwards. I crossed the M25 - London's orbital motorway - and headed south to Watford.
 
 ![landscape](https://farm9.staticflickr.com/8689/17380263676_e6af9074d9.jpg "M25")
 
 Over the phone I negotiated a £30 room in a B&B. In trying to find it, a big, blue, nox caught my attention. There was a TARDIS in someone's front garden. Next to it was a velociraptor and a robot dog! 
 
 ![landscape](https://farm8.staticflickr.com/7720/17405879671_56cf7bacd9.jpg "The Doctor?")
+
+![landscape](https://farm1.staticflickr.com/431/19455142931_f344a3bb8f_z_d.jpg "Ska-V-Goldsmith on his cyborg-dino-dog")
 
 As I stopped to take a picture the owner jumped out and said he'd move his car for me. His name was "Ska-V-Goldsmith" (or Nigel) and he seemed to be a modern day polymath with claims of a background in nuclear fission, rocket science and art. Nigel was certainly a very interesting person.
 
