--- a/blog/2015005.md
+++ b/blog/2015005.md
@@ -3,15 +3,17 @@ Title:	Coventry to Fenny Stratford
 Date:	2015-05-05T219:00:00+0100
 ---
 
-In Allesley I stopped at The Village Barbers to get a trim. Actually I got a number 1 as then I don't have to worry about washing my hair for a while. Thanks to Max (?) and Stacey for the haircut and good wishes.
+In Allesley I stopped at The Village Barbers to get a trim. Actually I got a number 1 as then I don't have to worry about washing my hair for a while. Thanks to Mark and Stacey for the haircut and good wishes.
+
+![landscape](https://farm1.staticflickr.com/319/18830149743_f5271a1dd9_z_d.jpg "Mark and Stacey")
 
 It was a short ride into Coventry and I found the Starley Memorial. I stopped to recreate [the illustration in Thomas Stevens' book](http://www.flickr.com/photos/britishlibrary/11189636485/). In using the self-timer my camera blew over in the wind and I had to dive to the concrete to save it. I then co-opted local man Paul to take the picture for me. He recommended the Coventry Transport Museum so that is where I went next.
 
-![portrait](https://farm8.staticflickr.com/7756/17352752396_8b54fa36df.jpg "The Starley Memorial")
+![portrait](https://farm1.staticflickr.com/454/19263220978_0cfc673039_z_d.jpg "The Starley Memorial")
 
 ![portrait](http://www.strudel.org.uk/blog/stevens/images/1885_starley_memorial.png "The Starley Memorial illustration courtesy of the British Library")
 
-![portrait](https://farm8.staticflickr.com/7709/17191216120_2094b1afaa.jpg "Paul")
+![portrait](https://farm8.staticflickr.com/7709/17191216120_2094b1afaa.jpg "Local Paul")
 
 The museum was being refurbished but was really good and had free entry. They started with the history of the Penny Farthing and progressed through the motor industry to the ThrustSSC.
 
@@ -27,6 +29,12 @@ I had some lovely views of Northamptonshire and reached Weedon Barracks by 15:45
 
 ![landscape](https://farm8.staticflickr.com/7747/17356128156_f003b3f3c2.jpg "Weedon Barracks")
 
-On the outskirts of Milton Keynes I paid a visit to the Cycle King bike shop to get spare break pads as mine are wearing down. I had a bit of a chat with the guys in the shop then pressed on around Milton Keynes. It didn't exist in Stevens' day so I was going to Fenny Stratford. Handily, Milton Keynes has a great network of cycle lanes so I was able to keep off road for quite a stretch.
+After Daventry I rode along the ancient Roman road of Watling Street which, unfortunately, is now the A5 and not the most pleasant cycling. On the outskirts of Milton Keynes, in Stony Stratford, I paid a visit to the [Cycle King bike shop](http://www.cycleking.co.uk/storemap.php?shopId=22) to get spare brake pads as mine are wearing down. I had a bit of a chat with the guys in the shop then pressed on around the south side of Milton Keynes. 
+
+![landscape](https://farm1.staticflickr.com/360/19444524622_890e8fa0ec_z_d.jpg "Cycle Kings")
+
+Milton Keynes didn't exist in Stevens' day so I was going to Fenny Stratford. Handily, Milton Keynes has a great network of cycle lanes so I was able to keep off-road for quite a stretch.
 
 About 17:30 I arrived at Fenny Stratford which seemed to be a retail park. I gorged on high calory pizza and pasties at Greggs and purchased a bright pink 5100 mAh battery pack whilst searching for toilets. I needed somewhere cheap to stay and I found a campsite a few miles further on by the canal.
+
+![landscape](https://farm4.staticflickr.com/3726/19263271448_a4c67f9c14_z_d.jpg "Campsite")
