--- a/blog/2015007.md
+++ b/blog/2015007.md
@@ -3,22 +3,34 @@ Title:	Across the capital
 Date:	2015-05-08T23:00:00+0100
 ---
 
-Leaving the B&B I made my way out of Watford on rather scary dual carriageways filled with rush hour traffic. I escaped into a massive Tesco to get breakfast (the B&B was really just a B) and let the traffic die down a little. Then I accidentally got onto Edgware Road (Stevens' route) and had second breakfast. 
+Leaving the B&B I made my way out of Watford on rather scary dual carriageways filled with rush-hour traffic. I escaped into a massive Tesco to get breakfast (the B&B was really just a 'B') and let the traffic die down a little. Then I accidentally got onto Edgware Road (Stevens' route) and had second breakfast. 
 
 My route now deviated from Stevens' in order to visit his grave in East Finchley. I'd visited it last year before undertaking the US leg and now I was back to check in with him. Whilst at the grave I met Heather and Claudia who were teachers at a local school. They hadn't heard of Thomas Stevens and wished me well on my trip.
 
 ![landscape](https://farm8.staticflickr.com/7788/17220058559_c87a55faa7.jpg "Thomas Stevens' grave in East Finchley Cemetery")
 
+![landscape](https://farm1.staticflickr.com/562/19424827236_a966f7329a_z_d.jpg "Heather and Claudia")
+
 I then headed for Spitalfields to visit my niece. London is slow going with all the traffic and traffic lights. You have to keep your wits about you to cycle in the capital. On reflection it is probably no worse than Boston had been and, in the congestion charge zone, it is possibly a little better. The best I could manage was an average of 6mph.
 
 ![landscape](https://farm8.staticflickr.com/7788/17380283966_6592bdd024.jpg "heading into London")
 
-I stayed at my niece's flat and had an attempt at an ice bath to try to help my knee.
+I had [a nice piece of cake and a cup of tea](https://twitter.com/RTWbike/status/596306850913591296) at Cafe From Crisis that tries to help people get back into work. I stayed at my niece's flat and had an attempt at an ice bath to try to help my knee.
 
 It was the night of the General Election. I'd voted by post before setting off but there was still the geeky excitement of the results coming in. I sat in bed watching coverage and Twitter until the early hours.
 
 The next morning I had a bit of a late start as I was only going as far as Surbiton. That would leave me without having to deal with too many slow London roads on the ride to Brighton.
 
-My route took me via the UK HQ of [MSF](http://www.msf.org.uk) where I met some of their digital team - Ben and Nick. After that I visited Trafalgar Square and Buckingham Palace before a very busy dual carriageway to Hammersmith. Over the Hammersmith bridge I reached Barnes Common 130 years too late for a [tricycle rally](http://www.strudel.org.uk/blog/stevens/000134.shtml#blog). I headed south through the glorious Richmond Park which is a green oasis in the urban sprawl. There was a herd of deer. Arriving into Kingston I rode for a short distance with a guy called Andy. In Surbiton I had a great welcome from my friend Tracey and her parents.
+My route took me via the UK HQ of [MSF](http://www.msf.org.uk) where I met some of their digital team - Ben and Nick. After that I visited Trafalgar Square, the Mall, and Buckingham Palace before a very busy dual carriageway to Hammersmith. 
+
+![portrait](https://farm9.staticflickr.com/8829/17313448148_72daaf4339_h_d.jpg "At Trafalgar Square with Nelson's column")
+
+![landscape](https://farm1.staticflickr.com/259/19455204041_6e69ec2205_z_d.jpg "The Mall looking towards Buckingham Palace")
+
+![landscape](https://farm1.staticflickr.com/389/19263376898_b18c862bde_z_d.jpg "Hammersmith bridge")
+
+Over the Hammersmith bridge I reached Barnes Common 130 years too late for a [tricycle rally](http://www.strudel.org.uk/blog/stevens/000134.shtml#blog). I headed south through the glorious Richmond Park which is a green oasis in the urban sprawl. There was a herd of deer. Arriving into Kingston I rode for a short distance with a guy called Andy. In Surbiton I had a great welcome from my friend Tracey and her parents.
+
+![landscape](https://farm8.staticflickr.com/7684/17499134942_bc88066a12_z_d.jpg "Deer in Richmond Park")
 
 I'd not covered big distances in the last two days but I'd more or less crossed the capital.
