--- a/blog/2015010.md
+++ b/blog/2015010.md
@@ -5,16 +5,34 @@ Date:	2015-05-120T22:00:00+0200
 
 Cycling out of Dieppe so early in the morning sun meant little traffic and a gentle introduction to French road signs (advice on the signs from Janet helped). I had a few miles of fast A-road equivalent and then I hit more rural roads. As Thomas Stevens experienced, the roads in Normandy are well paved and a pleasure to ride on. I hadn't expected the drivers to be as polite as they are. I haven't seen such politeness since the western states of the US.
 
+![landscape](https://farm4.staticflickr.com/3671/19451063485_65f7514c52_z_d.jpg "Leaving Dieppe on the Ancienne Route de Rouen")
+
+![landscape](https://farm1.staticflickr.com/485/19264927289_8056ff2d83_z_d.jpg "French field")
+
 ![landscape](https://farm9.staticflickr.com/8721/17535203446_2a956d0b73.jpg "Normandy")
 
 ![landscape](https://farm9.staticflickr.com/8822/17561040711_4326c3c0c4.jpg "Normandy")
 
-By late morning I reached Cleres and purchased some cheese, fruit and bread from the lovely local shops. On back roads, following advice from an expat Brit I had amazing scenery. Through the Forêt Verte my knee was no fan of the hills but the scenery made up for it.
+![landscape](https://farm1.staticflickr.com/362/19444789852_fea820d40f_z_d.jpg "Bus shelter food stop")
+
+![landscape](https://farm1.staticflickr.com/480/19455363461_d6eeb0d7fd_z_d.jpg "Old barn")
+
+By late morning I reached Clères and purchased some cheese, fruit and bread from the lovely local shops. On back roads, following advice from an expat Brit, I had amazing scenery. Through the Forêt Verte my knee was no fan of the hills but the scenery made up for it.
+
+![portrait](https://farm1.staticflickr.com/346/18830498283_ebe2f5d009_z_d.jpg "Clères")
+
+![landscape](https://farm4.staticflickr.com/3783/19263569680_08e1a91c53_z_d.jpg "Countryside")
+
+![landscape](https://farm1.staticflickr.com/333/19263578998_a0b4479889_z_d.jpg "Mairie")
+
+![portrait](https://farm1.staticflickr.com/393/19263582748_b6fba9ab15_z_d.jpg "Poppies")
 
 ![portrait](https://farm8.staticflickr.com/7726/17374761239_322f75e636.jpg "Beetle at lunch stop")
 
 I hadn't realised how high up I was and got a fabulous view of Rouen as I left the forest. My breaks were tested coming down the steep winding streets into Rouen and the Seine valley. I wasn't sure how long it would take to reach my kind hosts so I pressed onwards across the Seine. Through suburbs I was trying to find a bike-friendly bridge across a bend in the river rather than the autoroute that my GPS wanted me to use. Eventually I found one that crossed to an Idea and a retail park where I sat in McDonalds using the WiFi and toilets. 
 
-![panorama](https://farm8.staticflickr.com/7659/17373336898_aaa501f09c.jpg "Rouen")
+![landscape](https://farm1.staticflickr.com/403/19265007119_ef85fd69d3_z_d.jpg "Looking down to Rouen")
+
+![panorama](https://farm8.staticflickr.com/7659/17373336898_412d134a26_k_d.jpg "Rouen")
 
 As it got to 6pm I headed on to my hosts who would be back from work. They were the lovely Pierre and Marie and their two small children. They fed me, gave me a warm shower and gave me some strong topical cream for my knee. I slept on my camping mattress in their living room.
