--- a/blog/2015006.md
+++ b/blog/2015006.md
@@ -13,7 +13,7 @@ As the route swung around to the south through Bletchley and Leighton Buzzard, t
 
 ![portrait](https://farm1.staticflickr.com/392/19424772556_25e7040701_z_d.jpg "Aldbury in the Chilterns")
 
-!landscape](https://farm1.staticflickr.com/358/19450844115_0db0cd0fcb_z_d.jpg "Bluebells")
+![landscape](https://farm1.staticflickr.com/358/19450844115_0db0cd0fcb_z_d.jpg "Bluebells")
 
 I paused in Berkhampstead for pie and mash (not just any pie and mash - M&S pie and mash). There was a Penny Farthing hotel but it was over £115 a night! It seemed all the local accommodation was over £100 or fully booked. Onwards. I crossed the M25 - London's orbital motorway - and headed south to Watford.
 
