--- a/blog/2015008.md
+++ b/blog/2015008.md
@@ -3,19 +3,27 @@ Title:	To the English Channel
 Date:	2015-05-10T21:50:00+0100
 ---
 
-On Saturday morning I said goodbye to Tracey and headed out of Surbiton through Surrey. There were still quite a few busy London roads to go and negotiating the roundabout over the M25 required confidence. At this point I realised I'd lost my good warm jacket which I thought I'd secured under the bungees on the back of my bike. These two things knocked my mood and left me a bit despondent.
+On Saturday morning I said goodbye to my friend Tracey and headed out of Surbiton through Surrey. There were still quite a few busy London roads to go and negotiating the roundabout over the M25 required confidence. At this point I realised I'd lost my good warm jacket which I thought I'd secured under the bungees on the back of my bike. These two things knocked my mood and left me a bit despondent.
 
 I thought hitting National Cycle Network 21 would cheer me up but its constant stopping and starting, the endless give ways, the traffic lights that wouldn't change for bikes and the poor signage in places brought my mood down more. After winding through Gatwick airport I got to NCN 20 which went through woods and had gates that proved tough for a bike with panniers.
 
+![landscape](https://farm1.staticflickr.com/464/19264807179_eab88094b7_z_d.jpg)
+
 With 21 miles to go to Brighton I had to stop for a rest as my knee was becoming painful. It had been getting worse since day two. I was no longer sure I'd get to Brighton never mind Istanbul. On another eight painful miles I stopped at a bluebell-filled wood. I sat down amongst the bluebells for food and juice. I gave two deer a surprise - and them, me - as they bounded around me.
 
-![portrait](https://farm9.staticflickr.com/8842/17501295575_f5d526f809.jpg "Bluebell-filled wood")
+![portrait](https://farm1.staticflickr.com/420/19264855799_1e30efffd5_z_d.jpg "Bluebell-filled wood")
+
+![portrait](https://farm1.staticflickr.com/356/19263443640_319de902f5_z_d.jpg "Bluebells")
 
 The final miles were slow going but the cycle lane quality improved approaching Brighton. In I rolled well after 6pm to find the town full. It was Saturday night and there was a festival on. I headed over to the Caravan Club site to pitch my tent. I was very despondent.
 
-![portrait](https://farm6.staticflickr.com/5348/17499156442_fb8295a81f.jpg "The English Channel")
+![portrait](https://farm1.staticflickr.com/514/19455293011_81ac17637a_z_d.jpg "At the English Channel having cycled from New Brighton to Brighton")
 
-This morning I had a second shower to get my £18 worth of site fees and then visited the Brighton medical centre to see a nurse about my knee. Nothing was torn but I was prescribed some anti-inflammatories to help and told to rest it. My plan to keep to Stevens' ferry timetable was out.
+![portrait](https://farm4.staticflickr.com/3728/18828517304_d91c270c7a_z_d.jpg "Bike and the English Channel")
+
+![landscape](https://farm4.staticflickr.com/3883/18830416843_4046d56c07_z_d.jpg "Brighton")
+
+This morning (Sunday) I had a second shower to get my £18 worth of site fees and then visited the Brighton medical centre to see a nurse about my knee. Nothing was torn but I was prescribed some anti-inflammatories to help and told to rest it. My plan to keep to Stevens' ferry timetable was out.
 
 I was able to check into the YHA tonight and had a slow walk along the seafront taking in the famous pier and sitting on the pebble beach. I sat with a bag of ice on my knee until it melted.
 
