--- a/blog/2015011.md
+++ b/blog/2015011.md
@@ -5,7 +5,13 @@ Date:	2015-05-13T21:00:00+0200
 
 Today was an early start as Pierre and Marie had to take the children to school. As I had to visit Thomas Stevens' locations I had to go back over the Seine to Elbeuf then I tried my best to stay on small, quiet, roads (all very well paved) where possible through Gaillon to Vernon. My knee seemed to be bearing up surprisingly well. Pierre and Marie's magic cream must have helped. 
 
-![panorama](https://farm9.staticflickr.com/8865/17409930178_3ed76050d3.jpg "Panorama of the Seine")
+![landscape](https://farm1.staticflickr.com/285/19444867192_3c6c00d086_z_d.jpg "Cleon")
+
+![landscape](https://farm1.staticflickr.com/351/19444886432_a995100086_z_d.jpg "Seine")
+
+![landscape](https://farm1.staticflickr.com/293/19265046899_02c1e6828d_z_d.jpg "Farm")
+
+![panorama](https://farm9.staticflickr.com/8865/17409930178_691c70f8a8_k_d.jpg "Panorama of the Seine")
 
 ![portrait](https://farm8.staticflickr.com/7783/17410255910_539c33376a.jpg "Bike and church")
 
@@ -13,8 +19,26 @@ At Vernon I decided to jump to the other side of the Seine where the map showed 
 
 ![landscape](https://farm9.staticflickr.com/8829/17595492622_657b22e967.jpg "meadow")
 
+![landscape](https://farm1.staticflickr.com/419/19265069469_08d66b88d5_z_d.jpg "Church)
+
+![landscape](https://farm1.staticflickr.com/279/18828723294_482a9dd8f4_z_d.jpg "Vernon")
+
 In trying to find accommodation for the night, Google Maps was only showing expensive options. The reason for this became obvious when I arrived in Giverny home of Claud Monet. It is now a tourist trap and half the voices in the little Street were American. With a small daily budget I limited myself to just visiting Money's house and garden rather than the Impressionist Museum too. The flower and water gardens were particularly fragrant and pretty.
+
+![landscape](https://farm1.staticflickr.com/475/19263715580_74ec8109b8_z_d.jpg "Rue Claude Monet")
+
+![portrait](https://farm1.staticflickr.com/408/19265150229_3eaa4539ff_z_d.jpg "Flowers")
+
+![landscape](https://farm4.staticflickr.com/3702/19263704108_988969bb2b_z_d.jpg "Flowers")
+
+![landscape](https://farm1.staticflickr.com/385/19265116529_ba31681f32_z_d.jpg "Flowers")
+
+![landscape](https://farm1.staticflickr.com/355/18828759524_a01fb729f3_z_d.jpg "Flowers in Monet's garden")
+
+![landscape](https://farm1.staticflickr.com/334/19263704510_8d4605cfb3_z_d.jpg "The lilly pond")
 
 Leaving the flowers behind I headed for  a campsite Les Groux which had looked like being €20 online but the friendly lady at reception only charged me €10 as I was alone and without a car.
 
-After pitching my tent I met Leonard and Clotilde who were cycling on a tandem from Rouen to Versailles as a practice for cycling to the south of France later in the summer. They gave me more magic pomade for my knee and told me about their ride from Edinburgh to Brighton last year. It was great to talk to them and helped cheer me up some more. A large fraction of long distance cycling is the mental attitude and a combination of my knee pain and the worry over languages, money, and the difficulties ahead had been affecting me. Since New Haven I'd decided to limit my sights to Paris as I could get the train home from there if I felt terrible.
+After pitching my tent I met Leonard and Clotilde who were cycling on a tandem from Rouen to Versailles as a practice for cycling to the south of France later in the summer. They gave me magic pomade for my knee and told me about their ride from Edinburgh to Brighton last year. It was great to talk to them and they helped cheer me up some more. A large fraction of long distance cycling is the mental attitude and a combination of my knee pain, the worry over languages, money, and the difficulties ahead had been affecting me. Since New Haven I'd decided to limit my sights to Paris as I could get the train home from there if I felt terrible.
+
+![landscape](https://farm1.staticflickr.com/321/19444994932_bc914e56ea_z_d.jpg "Leonard and Clotilde")
